# expsum

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCppFmt.cmake  FindFFTW.cmake
example/: CMakeLists.txt  approx_pow.cpp  esprit.cpp  fast_esprit.cpp  sph_bessel_kernel.cpp
include/arma/: lapack_extra.hpp
include/expsum/: approx_pow.hpp  balanced_truncation.hpp  cholesky_cauchy.hpp  cholesky_quasi_cauchy.hpp  coneig_quasi_cauchy.hpp  coneig_sym_rrd.hpp  constants.hpp  esprit.hpp  exponential_sum.hpp  fast_esprit.hpp  function_fitter.hpp  gamma.hpp  gauss_quadrature.hpp  jacobi_svd.hpp  jacobi_svd_lapack.hpp  lsqr.hpp  modified_prony_truncation.hpp  numeric.hpp  partial_lanczos_bidiagonalization.hpp  qr_col_pivot.hpp  reduction.hpp  sparse_exponential_sum.hpp  vandermonde_matrix.hpp
include/expsum/fitting/: fast_esprit.hpp  function_fitter.hpp  hankel_matrix.hpp  vandermonde_matrix.hpp
include/expsum/kernel_functions/: bessel_kernel.hpp  gamma.hpp  gauss_quadrature.hpp  pow_kernel.hpp  sph_bessel_kernel.hpp
include/expsum/reduction/: balanced_truncation.hpp  cholesky_quasi_cauchy.hpp  coneig_sym_rrd.hpp
include/fftw3/: shared_plan.hpp
test/: CMakeLists.txt  balanced_truncation.cpp  cholesky_cauchy.cpp  cholesky_quasi_cauchy.cpp  coneig_quasi_cauchy.cpp  fast_esprit.cpp  gauss_quadrature.cpp  hankel_matrix.cpp  jacobi_svd.cpp  reduction.cpp  vandermonde_matrix.cpp
